[project]
name = "supertonic"
version = "3.0.0"
description = "Supertonic ONNX text-to-speech inference"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.23.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["supertonic"]
py-modules = ["helper"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
