[project]
name = "supertonic"
version = "3.1.0"
description = "Supertonic ONNX text-to-speech inference"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.23.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "httpx>=0.27.0"]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "jiwer>=3.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[tool.setuptools]
packages = ["supertonic"]
py-modules = ["helper"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
